base ground for neo4j queries module
mate4j-queries is a module to execute cypher queries from simple java interfaces.
Similar to myBatis :)