@@ -13,6 +13,7 @@
         <name>matero</name>
         <url>https://github.com/matero</url>
     </organization>
+
     <inceptionYear>2023</inceptionYear>
 
     <developers>
@@ -36,16 +37,6 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
-        <maven.compiler.release>21</maven.compiler.release>
-
-        <neo4j.version>5.13.0</neo4j.version>
-
-        <checkerframework.version>3.40.0</checkerframework.version>
-
-        <junit-jupiter.version>5.10.1</junit-jupiter.version>
-        <slf4j.version>2.0.9</slf4j.version>
     </properties>
 
     <licenses>
@@ -57,178 +48,24 @@
     </licenses>
 
     <modules>
-        <module>mate4j-fixtures</module>
+        <module>mate4j-code</module>
     </modules>
-
-    <dependencyManagement>
-
-        <dependencies>
-            <dependency>
-                <groupId>org.checkerframework</groupId>
-                <artifactId>checker-qual</artifactId>
-                <version>${checkerframework.version}</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.checkerframework</groupId>
-                <artifactId>checker</artifactId>
-                <version>${checkerframework.version}</version>
-                <scope>compile</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.checkerframework</groupId>
-                <artifactId>checker-util</artifactId>
-                <version>${checkerframework.version}</version>
-                <scope>compile</scope>
-            </dependency>
-
-            <!-- logs -->
-            <dependency>
-                <groupId>org.slf4j</groupId>
-                <artifactId>slf4j-api</artifactId>
-                <version>${slf4j.version}</version>
-            </dependency>
-
-            <!-- testing -->
-            <dependency>
-                <groupId>org.junit.jupiter</groupId>
-                <artifactId>junit-jupiter-api</artifactId>
-                <version>${junit-jupiter.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.junit.jupiter</groupId>
-                <artifactId>junit-jupiter</artifactId>
-                <version>${junit-jupiter.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.junit.jupiter</groupId>
-                <artifactId>junit-jupiter-params</artifactId>
-                <version>${junit-jupiter.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.junit.jupiter</groupId>
-                <artifactId>junit-jupiter-engine</artifactId>
-                <version>${junit-jupiter.version}</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>ch.qos.logback</groupId>
-                <artifactId>logback-classic</artifactId>
-                <version>1.4.11</version>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.checkerframework</groupId>
-            <artifactId>checker-qual</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.checkerframework</groupId>
-            <artifactId>checker</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.checkerframework</groupId>
-            <artifactId>checker-util</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
 
     <build>
         <defaultGoal>clean package</defaultGoal>
 
-        <!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
         <pluginManagement>
             <plugins>
-                <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
                 <plugin>
                     <artifactId>maven-clean-plugin</artifactId>
                     <groupId>org.apache.maven.plugins</groupId>
                     <version>3.2.0</version>
                 </plugin>
 
-                <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
                 <plugin>
                     <artifactId>maven-resources-plugin</artifactId>
                     <groupId>org.apache.maven.plugins</groupId>
                     <version>3.3.0</version>
-                </plugin>
-
-                <plugin>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <version>3.11.0</version>
-                    <configuration>
-                        <fork>true</fork> <!-- Must fork or else JVM arguments are ignored. -->
-                        <annotationProcessorPaths>
-                            <path>
-                                <groupId>org.checkerframework</groupId>
-                                <artifactId>checker</artifactId>
-                                <version>${checkerframework.version}</version>
-                            </path>
-                        </annotationProcessorPaths>
-                        <annotationProcessors>
-                            <!-- Add all the checkers you want to enable here -->
-                            <annotationProcessor>org.checkerframework.checker.nullness.NullnessChecker
-                            </annotationProcessor>
-                        </annotationProcessors>
-                        <compilerArgs>
-                            <compilerArg>--enable-preview</compilerArg>
-                            <arg>-Xmaxerrs</arg>
-                            <arg>10000</arg>
-                            <arg>-Xmaxwarns</arg>
-                            <arg>10000</arg>
-                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
-                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
-                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
-                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
-                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
-                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
-                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
-                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
-                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
-                            <!-- <arg>-Awarns</arg> --> <!-- -Awarns turns type-checking errors into warnings. -->
-                        </compilerArgs>
-                    </configuration>
-                </plugin>
-
-                <plugin>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <version>3.0.0-M7</version>
-                    <configuration>
-                        <argLine>--enable-preview</argLine>
-                        <includes>
-                            <include>**/*Test.java</include>
-                        </includes>
-                    </configuration>
-                </plugin>
-
-                <plugin>
-                    <artifactId>maven-failsafe-plugin</artifactId>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <version>3.0.0-M7</version>
-                    <configuration>
-                        <argLine>--enable-preview</argLine>
-                        <includes>
-                            <include>**/*Specification.java</include>
-                        </includes>
-                    </configuration>
                 </plugin>
 
                 <plugin>
@@ -249,7 +86,6 @@
                     <version>3.0.0</version>
                 </plugin>
 
-                <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
                 <plugin>
                     <artifactId>maven-site-plugin</artifactId>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -263,69 +99,5 @@
                 </plugin>
             </plugins>
         </pluginManagement>
-
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-enforcer-plugin</artifactId>
-                <version>3.1.0</version>
-                <executions>
-                    <execution>
-                        <id>enforce-maven</id>
-                        <goals>
-                            <goal>enforce</goal>
-                        </goals>
-                        <configuration>
-                            <rules>
-                                <requireMavenVersion>
-                                    <version>3.8.5</version>
-                                </requireMavenVersion>
-
-                                <!-- https://www.mojohaus.org/versions/versions-enforcer/index.html -->
-                                <maxDependencyUpdates>
-                                    <maxUpdates>300</maxUpdates>
-                                    <ignoreSubIncrementalUpdates>true</ignoreSubIncrementalUpdates>
-                                </maxDependencyUpdates>
-                            </rules>
-                        </configuration>
-                    </execution>
-                </executions>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.codehaus.mojo.versions</groupId>
-                        <artifactId>versions-enforcer</artifactId>
-                        <version>2.16.1</version>
-                    </dependency>
-                </dependencies>
-            </plugin>
-
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>versions-maven-plugin</artifactId>
-                <version>2.16.1</version>
-            </plugin>
-
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>license-maven-plugin</artifactId>
-                <version>2.3.0</version>
-                <executions>
-                    <execution>
-                        <id>add-license</id>
-                        <goals>
-                            <goal>update-file-header</goal>
-                        </goals>
-                        <phase>process-sources</phase>
-                        <configuration>
-                            <licenseName>mit</licenseName>
-                            <roots>
-                                <root>src/main/java</root>
-                                <root>src/test/java</root>
-                            </roots>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
     </build>
 </project>
